*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.26 ===
* Added send/return options to communicate with another equalizers/plugins.
* Updated build scripts and dependencies.

=== 1.0.25 ===
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Fixed bug in smoothing mode when parameters of filters change.
* Implemented Bypass::process_wet method for better performance.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Implemented separate input and output signal spectrum analysis.
* Implemented automatic scale of spectrum graph switch.
* Updated zoom fader.
* Added support of variable size of filter dots.
* Implemented x8 versions.
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Fixed frequency inspection bug for LeftRight and MidSide versions of plugin.
* Added Bandpass, Ladder-pass and Ladder-rej filters.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Fixed regression: non-working solo button after 1.2.6 release.
* Added display of filter number, filer channel and filter type near to the
  frequency and note.
* Added possibility to switch filter between Mid/Side and Left/Right channels.
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Equalizer is now smoothly operating with frequency/gain/q factor for each
  mode: FIR, IIR, FFT, SPM.
* Added popup menu for more precise control over the equalizer dot on the graph.